Fix hero images contrast, size and aspect ratio

--- a/app/assets/stylesheets/views/pages/_mirrors.scss
+++ b/app/assets/stylesheets/views/pages/_mirrors.scss
@@ -46,6 +46,10 @@
       padding: 200px 0;
     }
 
+    @include media($huge) {
+      padding: 300px 0;
+    }
+
     h1 {
       color: color("white");
     }
